# selenium-python-automation-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TEMPLATE_USAGE.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  verify_setup.py
.github/: REPOSITORY_SETUP.md  pull_request_template.md  template-cleanup.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test-automation.yml
framework/: __init__.py
framework/config/: settings.py
framework/core/: base_page.py  browser_manager.py
framework/pages/: __init__.py  example_form_page.py  google_page.py
framework/utils/: helpers.py  logger.py
tests/api/: test_example_api.py
tests/data/: test_users.json
tests/ui/: test_form_interactions.py  test_google_search.py
